--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -8,7 +8,10 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    runs-on: $
 
     steps:
       - name: Checkout
@@ -17,5 +20,6 @@ jobs:
         uses: actions/setup-node@v3
       - name: Install npm dependencies
         run: npm ci
-      - name: Run unit tests
-        run: npm test
+      - run: |
+          npm build --if-present
+          npm test
