--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
       - name: Run unit tests
-      - run: npm test
+        run: npm test
 
   build:
     strategy:
@@ -37,4 +37,4 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
       - name: Build app
-      - run: npm build --if-present
+        run: npm build --if-present
