--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "format:check": "prettier . --check --ignore-path .gitignore",
+    "format:fix": "prettier . --check --ignore-path .gitignore"
   },
   "dependencies": {
     "react": "^18.2.0",
