--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -7,8 +7,27 @@ on:
     branches: [main]
 
 jobs:
+  prettier:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+      - uses: actions/cache@v3
+        id: npm-cache
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('**/package-lock.json') }}
+      - name: Install npm dependencies
+        run: npm ci
+      - name: Check formatting with prettier
+        run: npm run format:check
+
   audit:
     runs-on: ubuntu-latest
+    needs: [prettier]
 
     steps:
       - name: Checkout
