--- a/.github/actions/checkout-install.yml
+++ b/.github/actions/checkout-install.yml
@@ -2,10 +2,10 @@ name: Checkout, Install node and dependencies
 description: Reusable ste
 
 runs:
-  using: composite
+  using: 'composite'
   steps:
-    - uses: actions/checkout@v3
-      name: Checkout Repository
+    - name: Checkout
+      uses: actions/checkout@v3
     - name: Setup Node
       uses: actions/setup-node@v3
       with:
@@ -16,4 +16,5 @@ runs:
       with:
         path: ~/.npm
         key: npm-${{ hashFiles('**/package-lock.json') }}
-    - run: npm ci
+    - name: Install npm dependencies
+      run: npm ci
