--- a/.github/actions/checkout-install-cache/action.yml
+++ b/.github/actions/checkout-install-cache/action.yml
@@ -15,4 +15,5 @@ runs:
         path: ~/.npm
         key: npm-${{ hashFiles('**/package-lock.json') }}
     - name: Install npm dependencies
+      shell: bash
       run: npm ci
